--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@sapphire/pieces": "^3.3.1",
     "@sapphire/result": "^1.1.1",
     "@sapphire/utilities": "^3.6.2",
-    "fuwa": "github:fuwa-org/fuwa"
+    "fuwa": "^0.0.1"
   },
   "repository": {
     "type": "git",
