--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "ESNext",
     "outDir": "../dist",
     "declaration": true,
-    "declarationDir": "../dist/types"
+    "declarationDir": "../dist/types",
   },
   "include": ["."]
 }
